--- a/index.html
+++ b/index.html
@@ -22,35 +22,222 @@
     <nav class="navigation" id="navigation">
       <span class="close-menu" id="close-btn">Fechar</span>
       <ul class="navigation__menu">
-        <li><a href="#header">Home</a></li>
+        <li><a href="#home">Home</a></li>
         <li><a href="#services">Services</a></li>
         <li><a href="#rooms">Rooms</a></li>
-        <li><a href="#customers">Customers</a></li>
+        <li><a href="#book">Book</a></li>
       </ul>
       <button class="btn sign-up">Sign up</button>
       <button class="btn log-in">Log in</button>
     </nav>
 
-    <div class="header__title flex-1">
-      <h2>WELCOME TO HOSTEL VILLAGE</h2>
-      <button type="button" class="header__button">GET STARTED</button>
+    <div class="header__title">
+      <h2>HOSTEL VILLAGE</h2>
+      <button type="button" class="header__button">WELCOME</button>
     </div>
   </header>
+  <section class="services" id="services">
+    <h2 class="description">services</h2>
+    <div class="services__container">
+      <article class="service">
+        <div class="service__item">
+          <h2>Food Service/ Food Runner</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias blanditiis tempore officia
+            accusamus asperiores. Illum maxime eligendi necessitatibus laudantium iste nisi pariatur
+            doloremque ut illo similique voluptatum enim distinctio perferendis, ad ipsam aspernatur omnis
+            rem autem ex, reiciendis corporis suscipit!</p>
+          <button type="button" class="btn">Know More</button>
+        </div>
+      </article>
+      <article class="service">
+        <div class="service__item">
+          <h2>Refreshment</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias blanditiis tempore officia
+            accusamus asperiores. Illum maxime eligendi necessitatibus laudantium iste nisi pariatur
+            doloremque ut illo similique voluptatum enim distinctio perferendis, ad ipsam aspernatur omnis
+            rem autem ex, reiciendis corporis suscipit!</p>
+          <button type="button" class="btn">Know More</button>
+        </div>
+      </article>
+
+      <article class="service">
+        <div class="service__item">
+          <h2>Housekeeping</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias blanditiis tempore officia
+            accusamus asperiores. Illum maxime eligendi necessitatibus laudantium iste nisi pariatur
+            doloremque ut illo similique voluptatum enim distinctio perferendis, ad ipsam aspernatur omnis
+            rem autem ex, reiciendis corporis suscipit!</p>
+          <button type="button" class="btn">Know More</button>
+        </div>
+      </article>
+
+      <article class="service">
+        <div class="service__item">
+          <h2>Room Security</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias blanditiis tempore officia
+            accusamus asperiores. Illum maxime eligendi necessitatibus laudantium iste nisi pariatur
+            doloremque ut illo similique voluptatum enim distinctio perferendis, ad ipsam aspernatur omnis
+            rem autem ex, reiciendis corporis suscipit!</p>
+          <button type="button" class="btn">Know More</button>
+        </div>
+    </div>
+    </article>
+  </section>
+
+  <section id="rooms">
+    <h2 class="description">rooms</h2>
+    <div class="rooms__container">
+      <article class="room__item">
+        <div class="room__image">
+          <img src="images/img-1.jpg" alt="room image">
+        </div>
+        <div class="room__text">
+          <h3>Luxury Rooms</h3>
+          <ul class="list__style">
+            <li>Lorem ipsum dolor sit amet.</li>
+            <li>Lorem ipsum dolor sit amet.</li>
+            <li>Lorem ipsum dolor sit amet.</li>
+            <li>Lorem ipsum dolor sit amet.</li>
+          </ul>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus exercitationem repellendus
+            maxime ullam tempore architecto provident unde expedita quam beatae, dolore eligendi molestias
+            sint tenetur incidunt voluptas. Unde corporis qui iusto vitae. Aut nesciunt id iste, cum esse
+            commodi nemo?</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla corporis quasi officiis cumque,
+            fugiat nostrum sunt, tempora animi dicta laborum beatae ratione doloremque. Delectus odio sit
+            eius labore, atque quo?</p>
+          <p class="rate">
+            <span>R$300.00 </span> Day
+          </p>
+          <button type="button" class="btn">book now</button>
+        </div>
+      </article>
+
+      <article class="room__item">
+        <div class="room__image">
+          <img src="images/img-2.jpg" alt="room image">
+        </div>
+        <div class="room__text">
+          <h3>Luxury Rooms</h3>
+          <ul class="list__style">
+            <li>Lorem ipsum dolor sit amet.</li>
+            <li>Lorem ipsum dolor sit amet.</li>
+            <li>Lorem ipsum dolor sit amet.</li>
+            <li>Lorem ipsum dolor sit amet.</li>
+          </ul>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus exercitationem repellendus
+            maxime ullam tempore architecto provident unde expedita quam beatae, dolore eligendi molestias
+            sint tenetur incidunt voluptas. Unde corporis qui iusto vitae. Aut nesciunt id iste, cum esse
+            commodi nemo?</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla corporis quasi officiis cumque,
+            fugiat nostrum sunt, tempora animi dicta laborum beatae ratione doloremque. Delectus odio sit
+            eius labore, atque quo?</p>
+          <p class="rate">
+            <span>R$320.00 </span> Day
+          </p>
+          <button type="button" class="btn">book now</button>
+        </div>
+      </article>
+
+      <article class="room__item">
+        <div class="room__image">
+          <img src="images/img-3.jpg" alt="room image">
+        </div>
+        <div class="room__text">
+          <h3>Luxury Rooms</h3>
+          <ul class="list__style">
+            <li>Lorem ipsum dolor sit amet.</li>
+            <li>Lorem ipsum dolor sit amet.</li>
+            <li>Lorem ipsum dolor sit amet.</li>
+            <li>Lorem ipsum dolor sit amet.</li>
+          </ul>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus exercitationem repellendus
+            maxime ullam tempore architecto provident unde expedita quam beatae, dolore eligendi molestias
+            sint tenetur incidunt voluptas. Unde corporis qui iusto vitae. Aut nesciunt id iste, cum esse
+            commodi nemo?</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla corporis quasi officiis cumque,
+            fugiat nostrum sunt, tempora animi dicta laborum beatae ratione doloremque. Delectus odio sit
+            eius labore, atque quo?</p>
+          <p class="rate">
+            <span>R$330.00 </span> Day
+          </p>
+          <button type="button" class="btn">book now</button>
+        </div>
+      </article>
+
+      <article class="room__item">
+        <div class="room__image">
+          <img src="images/img-4.jpg" alt="room image">
+        </div>
+        <div class="room__text">
+          <h3>Luxury Rooms</h3>
+          <ul class="list__style">
+            <li>Lorem ipsum dolor sit amet.</li>
+            <li>Lorem ipsum dolor sit amet.</li>
+            <li>Lorem ipsum dolor sit amet.</li>
+            <li>Lorem ipsum dolor sit amet.</li>
+          </ul>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus exercitationem repellendus
+            maxime ullam tempore architecto provident unde expedita quam beatae, dolore eligendi molestias
+            sint tenetur incidunt voluptas. Unde corporis qui iusto vitae. Aut nesciunt id iste, cum esse
+            commodi nemo?</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla corporis quasi officiis cumque,
+            fugiat nostrum sunt, tempora animi dicta laborum beatae ratione doloremque. Delectus odio sit
+            eius labore, atque quo?</p>
+          <p class="rate">
+            <span> R$350.00 </span> Day
+          </p>
+          <button type="button" class="btn">book now</button>
+        </div>
+      </article>
+    </div>
+  </section>
+
+  <section class="bookRoom" id="book">
+    <form class="bookRoom__form">
+      <div class="form__item">
+        <label for="checkin-date">Check In Date: </label>
+        <input type="date" id="chekin-date">
+      </div>
+      <div class="form__item">
+        <label for="checkout-date">Check Out Date: </label>
+        <input type="date" id="chekout-date">
+      </div>
+      <div class="form__item">
+        <label for="adult">Adults: </label>
+        <input type="number" min="1" value="1" id="adult">
+      </div>
+      <div class="form__item">
+        <label for="children">Children: </label>
+        <input type="number" min="0" value="1" id="children">
+      </div>
+      <div class="form__item">
+        <label for="rooms">Rooms: </label>
+        <input type="number" min="1" value="1" id="rooms">
+      </div>
+      <div class="form__item">
+        <input type="submit" class="btn" value="Book Now">
+      </div>
+    </form>
+  </section>
 
   <footer class="footer">
-    <div class="footer-container">
+    <div class="footer__container">
       <div>
         <h2>About Us </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque sapiente mollitia doloribus
-          provident? Eos quisquam aliquid vel dolorum, impedit culpa.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, magnam reprehenderit perferendis placeat
+          molestias quas atque obcaecati, rerum voluptatum corrupti quam praesentium distinctio qui nostrum facilis
+          error soluta dolor et nesciunt. Illum est error dolorum iusto saepe, repellendus corporis amet qui aliquam
+          fuga minima omnis reprehenderit, esse consequuntur blanditiis! Id exercitationem quaerat sint quod accusam
+          quidem repudiandae?</p>
       </div>
 
       <div>
-        <h2>Useful Links</h2>
+        <h2>Social Media</h2>
         <a href="#">Blog</a>
-        <a href="#">Rooms</a>
-        <a href="#">Subscription</a>
-        <a href="#">Gift Card</a>
+        <a href="#">Instagram</a>
+        <a href="#">Facebook</a>
+        <a href="#">Twitter</a>
       </div>
 
       <div>
@@ -63,19 +250,19 @@
 
       <div>
         <h2>Have A Question</h2>
-        <div class="contact-item">
+        <div class="contact__item">
           <span>
-            203 Fake St.Mountain View, San Francisco, California, USA
+            Centro, Av. Principal, 1234 - Salvador, BA. Brasil
           </span>
         </div>
-        <div class="contact-item">
+        <div class="contact__item">
           <span>
-            +84545 37534 48
+            +5571 99876 1234
           </span>
         </div>
-        <div class="contact-item">
+        <div class="contact__item">
           <span>
-            info@domain.com
+            hostelvillagesalvador@gmail.com
           </span>
         </div>
       </div>
