--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>HOSTEL VILLAGE</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/main.css">
-  <link href="css/carousel.css" rel="stylesheet">
-  <link href="css/main.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/main.css">
+  <title>HOSTEL VILLAGE</title>
 </head>
 
 <body>
@@ -30,8 +28,6 @@
         <li><a href="#rooms">Rooms</a></li>
         <li><a href="#book">Book</a></li>
       </ul>
-      <button class="btn sign-up">Sign up</button>
-      <button class="btn log-in">Log in</button>
     </nav>
 
     <div class="header__title">
@@ -105,13 +101,13 @@
           </button>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="images/img1.jpg" alt="">
+              <img src="assets/images/img1.jpg" alt="">
             </div>
             <div class="carousel-item">
-              <img src="images/img2.jpg" alt="">
+              <img src="assets/images/img2.jpg" alt="">
             </div>
             <div class="carousel-item">
-              <img src="images/bath1.jpg" alt="">
+              <img src="assets/images/bath1.jpg" alt="">
             </div>
           </div>
         </div>
@@ -152,13 +148,13 @@
           </button>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="images/img3.jpg" alt="">
+              <img src="assets/images/img3.jpg" alt="">
             </div>
             <div class="carousel-item">
-              <img src="images/img4.jpg" alt="">
+              <img src="assets/images/img4.jpg" alt="">
             </div>
             <div class="carousel-item">
-              <img src="images/bath2.jpg" alt="">
+              <img src="assets/images/bath2.jpg" alt="">
             </div>
           </div>
         </div>
@@ -199,13 +195,13 @@
           </button>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="images/img5.jpg" alt="">
+              <img src="assets/images/img5.jpg" alt="">
             </div>
             <div class="carousel-item">
-              <img src="images/img6.jpg" alt="">
+              <img src="assets/images/img6.jpg" alt="">
             </div>
             <div class="carousel-item">
-              <img src="images/bath3.jpg" alt="">
+              <img src="assets/images/bath3.jpg" alt="">
             </div>
           </div>
         </div>
@@ -243,13 +239,13 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="images/img7.jpg"alt="">
+              <img src="assets/images/img7.jpg" alt="">
             </div>
             <div class="carousel-item">
-              <img src="images/img8.jpg"alt="">
+              <img src="assets/images/img8.jpg" alt="">
             </div>
             <div class="carousel-item">
-              <img src="images/bath4.jpg" alt="...">
+              <img src="assets/images/bath4.jpg" alt="...">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -362,8 +358,8 @@
       </div>
     </div>
   </footer>
-  <script src="js/script.js"></script>
-  <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/script.js"></script>
+  <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
