--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/main.css">
-  <title>HOSTEL VILLAGE</title>
+  <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
+  <title>Hostel Village</title>
 </head>
 
 <body>
